--- a/cache.yml
+++ b/cache.yml
@@ -220,18 +220,28 @@ children:
   scope: null
 - !!com.aptana.scripting.model.SmartTypingPairsElement
   customProperties: null
-  displayName: smart_typing_pairs-19fad856-0c94-4f0e-86b9-d0eb8b3d9296
+  displayName: smart_typing_pairs-f2f3fe4f-0a41-4ccd-b66c-4a951b930eff
   pairs: [&id002 '"', *id002, (, ), '{', '}', '[', ']']
   path: bundle.rb
   scope: ''
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Transliterate Word / Selection to ASCII, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: replace_selection, path: commands/convert_to_ascii.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Transliterate Word / Selection to ASCII
+  input: [selection, word]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: replace_selection
+  path: commands/convert_to_ascii.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
 - !!com.aptana.scripting.model.CommandElement
   async: false
   customProperties: null
   displayName: Convert Character / Selection to Hex
+  input: [selection, right_character]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+M2+X]
@@ -241,18 +251,37 @@ children:
   runType: current_thread
   scope: null
   workingDirectoryType: UNDEFINED
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Copy Matching Lines into New Document, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: create_new_document, path: commands/copy_matching_lines_into_new_document.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Copy Non-Matching Lines into New Document, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: create_new_document, path: commands/copy_non-matching_lines_into_new_document.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Copy Matching Lines into New Document
+  input: [document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: create_new_document
+  path: commands/copy_matching_lines_into_new_document.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Copy Non-Matching Lines into New Document
+  input: [document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: create_new_document
+  path: commands/copy_non-matching_lines_into_new_document.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
 - !!com.aptana.scripting.model.CommandElement
   async: false
   customProperties: null
   displayName: AES Decrypt Document / Selection With Password...
+  input: [selection, document]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+SHIFT+COMMAND+E]
@@ -266,6 +295,7 @@ children:
   async: false
   customProperties: null
   displayName: Delete Line
+  input: [none]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+M2+K]
@@ -279,6 +309,7 @@ children:
   async: false
   customProperties: null
   displayName: Delete to Beginning of Line
+  input: [none]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [COMMAND+BACKSPACE]
@@ -288,14 +319,24 @@ children:
   runType: current_thread
   scope: null
   workingDirectoryType: UNDEFINED
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Distill Document / Selection, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: replace_selection, path: commands/distill_document_selection.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Distill Document / Selection
+  input: [document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: replace_selection
+  path: commands/distill_document_selection.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
 - !!com.aptana.scripting.model.CommandElement
   async: false
   customProperties: null
   displayName: Duplicate Line / Selection
+  input: [selection, none]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+M2+D]
@@ -309,6 +350,7 @@ children:
   async: false
   customProperties: null
   displayName: AES Encrypt Document / Selection With Password...
+  input: [selection, document]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+SHIFT+COMMAND+E]
@@ -318,14 +360,24 @@ children:
   runType: current_thread
   scope: null
   workingDirectoryType: UNDEFINED
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Add Line Numbers to Document / Selection, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: replace_selection, path: commands/enumerate_lines.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Add Line Numbers to Document / Selection
+  input: [selection, document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: replace_selection
+  path: commands/enumerate_lines.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
 - !!com.aptana.scripting.model.CommandElement
   async: false
   customProperties: null
   displayName: Execute Selection/Line Inserting Results
+  input: [selection, line]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CTRL+R]
@@ -339,6 +391,7 @@ children:
   async: false
   customProperties: null
   displayName: Smaller
+  input: [none]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [M1+-]
@@ -352,6 +405,7 @@ children:
   async: false
   customProperties: null
   displayName: Bigger
+  input: [none]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [M1+M2+=]
@@ -365,6 +419,7 @@ children:
   async: false
   customProperties: null
   displayName: Join Lines
+  input: [none]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+M2+J]
@@ -378,6 +433,7 @@ children:
   async: false
   customProperties: null
   displayName: Move to EOL and Insert "."
+  input: [line]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [OPTION+COMMAND+ENTER]
@@ -391,6 +447,7 @@ children:
   async: false
   customProperties: null
   displayName: Move to EOL and Insert "." + LF
+  input: [line]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [SHIFT+COMMAND+ENTER]
@@ -400,14 +457,24 @@ children:
   runType: current_thread
   scope: text
   workingDirectoryType: UNDEFINED
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Randomize Lines in Document / Selection, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: replace_selection, path: commands/randomize_lines_in_document_selection.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Randomize Lines in Document / Selection
+  input: [selection, document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: replace_selection
+  path: commands/randomize_lines_in_document_selection.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
 - !!com.aptana.scripting.model.CommandElement
   async: false
   customProperties: null
   displayName: Sort Lines in Document / Selection
+  input: [selection, document]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [F6]
@@ -421,6 +488,7 @@ children:
   async: false
   customProperties: null
   displayName: Sort Lines & Remove Duplicates
+  input: [selection, document]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [F6]
@@ -430,22 +498,50 @@ children:
   runType: current_thread
   scope: null
   workingDirectoryType: UNDEFINED
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Speak Document / Selection, inputPath: null, keyBindingMap: null, outputPath: null,
-  outputType: discard, path: commands/speak_document_selection.rb, runType: current_thread,
-  scope: null, workingDirectoryType: UNDEFINED}
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Remove Unprintable Characters in Document / Selection, inputPath: null,
-  keyBindingMap: null, outputPath: null, outputType: replace_selection, path: commands/strip_non-printables.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
-- !!com.aptana.scripting.model.CommandElement {async: false, customProperties: null,
-  displayName: Remove Trailing Spaces in Document / Selection, inputPath: null, keyBindingMap: null,
-  outputPath: null, outputType: replace_selection, path: commands/strip_trailing_spaces.rb,
-  runType: current_thread, scope: null, workingDirectoryType: UNDEFINED}
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Speak Document / Selection
+  input: [selection, document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: discard
+  path: commands/speak_document_selection.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Remove Unprintable Characters in Document / Selection
+  input: [selection, document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: replace_selection
+  path: commands/strip_non-printables.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
+- !!com.aptana.scripting.model.CommandElement
+  async: false
+  customProperties: null
+  displayName: Remove Trailing Spaces in Document / Selection
+  input: [selection, document]
+  inputPath: null
+  keyBindingMap: null
+  outputPath: null
+  outputType: replace_selection
+  path: commands/strip_trailing_spaces.rb
+  runType: current_thread
+  scope: null
+  workingDirectoryType: UNDEFINED
 - !!com.aptana.scripting.model.CommandElement
   async: false
   customProperties: null
   displayName: Statistics for Document / Selection (Word Count)
+  input: [selection, document]
   inputPath: null
   keyBindingMap:
     !!com.aptana.scripting.model.Platform 'ALL': [CONTROL+M2+N]
@@ -460,6 +556,7 @@ children:
   customProperties:
     prefix_values: [c)]
   displayName: Copyright Notice
+  input: [none]
   inputPath: null
   keyBindingMap: null
   outputPath: null
@@ -473,6 +570,7 @@ children:
   customProperties:
     prefix_values: [isoD]
   displayName: Current Date - YYYY-MM-DD
+  input: [none]
   inputPath: null
   keyBindingMap: null
   outputPath: null
@@ -487,6 +585,7 @@ children:
     prefix_values: [lorem]
   displayName: Lorem ipsum
   expansion: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  input: [none]
   inputPath: null
   keyBindingMap: null
   outputPath: null
